--- a/style.css
+++ b/style.css
@@ -7,16 +7,22 @@
 
 body {
      background-color: #222;
+     background-image: url("bg.jpg");
+     background-repeat: no-repeat;
+     background-position: center;
+     background-size: cover;
+     height: 80vh;
 }
 .card{
      width: 90%;
      max-width: 470px;
-     background: linear-gradient(135deg, #00feba, #5b548a);
+     background: linear-gradient(0deg, #78b865, #60635d, rgba(55,84,34,255));
      color: #fff;
      margin: 100px auto 0;
      border-radius: 20px;
      padding: 40px 35px;
      text-align: center;
+     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .search{
      width: 90%;
